--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "@fullhuman/postcss-purgecss": "^1.2.0",
         "autoprefixer": "^9.6.1",
         "axios": "^0.19",
         "cross-env": "^5.1",
@@ -17,6 +18,7 @@
         "laravel-mix-postcss-config": "^1.0.2",
         "lodash": "^4.17.13",
         "popper.js": "^1.12",
+        "postcss-font-magician": "^2.2.2",
         "resolve-url-loader": "2.3.1",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
