--- a/package.json
+++ b/package.json
@@ -1,29 +1,34 @@
 {
-    "private": true,
-    "scripts": {
-        "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
-    },
-    "devDependencies": {
-        "@fullhuman/postcss-purgecss": "^1.2.0",
-        "autoprefixer": "^9.6.1",
-        "axios": "^0.19",
-        "cross-env": "^5.1",
-        "laravel-mix": "^4.0.7",
-        "laravel-mix-postcss-config": "^1.0.2",
-        "lodash": "^4.17.13",
-        "popper.js": "^1.12",
-        "postcss-font-magician": "^2.2.2",
-        "resolve-url-loader": "2.3.1",
-        "vue": "^2.5.17",
-        "vue-template-compiler": "^2.6.10"
-    },
-    "dependencies": {
-        "tailwindcss": "^1.1.2"
-    }
+  "private": true,
+  "scripts": {
+    "dev": "npm run development",
+    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch": "npm run development -- --watch",
+    "watch-poll": "npm run watch -- --watch-poll",
+    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "prod": "npm run production",
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "test": "jest"
+  },
+  "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^1.2.0",
+    "autoprefixer": "^9.6.1",
+    "axios": "^0.19",
+    "babel-jest": "^24.9.0",
+    "cross-env": "^5.1",
+    "jest": "^24.9.0",
+    "laravel-mix": "^4.0.7",
+    "laravel-mix-postcss-config": "^1.0.2",
+    "lodash": "^4.17.13",
+    "popper.js": "^1.12",
+    "postcss-font-magician": "^2.2.2",
+    "resolve-url-loader": "2.3.1",
+    "vue": "^2.5.17",
+    "vue-jest": "^3.0.5",
+    "vue-template-compiler": "^2.6.10",
+    "vue-test-utils": "^1.0.0-beta.11"
+  },
+  "dependencies": {
+    "tailwindcss": "^1.1.2"
+  }
 }
