--- a/docker/node/Dockerfile
+++ b/docker/node/Dockerfile
@@ -4,11 +4,13 @@ LABEL author="Yazeed Obaid"
 LABEL version=0.1.0
 LABEL description="Docker image for Javascript and assests of a PHP Laravel application"
 
+RUN set -x
+
 # working directory is the project root
 WORKDIR /opt
 
 # copying the run script for the container.
-COPY start-container.sh /usr/bin/start-container
+COPY start-container /usr/bin/start-container
 
 # make script executable
 RUN chmod +x /usr/bin/start-container
