--- a/package.json
+++ b/package.json
@@ -37,9 +37,8 @@
     "vue": "^2.5.17",
     "vue-jest": "^3.0.5",
     "vue-template-compiler": "^2.6.10",
-    "vue-test-utils": "^1.0.0-beta.11"
-  },
-  "dependencies": {
+    "@vue/test-utils": "^1.0.0-beta.11",
     "tailwindcss": "^1.1.2"
-  }
+  },
+  "dependencies": {}
 }
