--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,9 @@ services:
       - 80:80
       - 443:443
     working_dir: /var/www/html/
+    depends_on:
+      - mysql
+      - redis
   node:
     build:
       context: docker/node
