--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=laravel
 DB_ROOT_PASSWORD=
-DB_USERNAME=root
+DB_USERNAME=laravel
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
