--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
-version: '3'
+version: '3.7'
+
 services:
   app:
     build:
@@ -6,6 +7,12 @@ services:
       dockerfile: Dockerfile
     image:
       laravelapp/app:latest
+    healthcheck:
+      test: ["CMD", "curl", "-f", "${APP_URL}"]
+      interval: 1m30s
+      timeout: 2s
+      retries: 3
+      start_period: 30s
     networks:
       - appnet
     env_file:
@@ -34,6 +41,8 @@ services:
     working_dir: /opt/
   mysql:
     image: mysql:5.7
+    env_file:
+      - .env
     environment:
       MYSQL_ROOT_PASSWORD: "${DB_ROOT_PASSWORD}"
       MYSQL_DATABASE: "${DB_DATABASE}"
@@ -47,6 +56,8 @@ services:
       - app-data:/var/lib/mysql
   redis:
     image: redis:5.0.7-alpine
+    env_file:
+      - .env
     ports:
       - ${REDIS_PORT}:${REDIS_PORT}
     networks:
