Add the --env=prod argument to production image in stack file

--- a/docker/docker-stack.yml
+++ b/docker/docker-stack.yml
@@ -23,6 +23,7 @@ version: "3.7"
 services:
   web:
     image: laravelapp/app:latest
+    command: ["--env=prod"]
     env_file:
       - .env
     ports:
