--- a/docker/docker-stack.yml
+++ b/docker/docker-stack.yml
@@ -3,27 +3,36 @@
 #
 # 1. The web service has the application code, PHP_FPM and Nginx. This service uses an image.
 #    The service is run in replica mode with 3 replicas by default. It exposes ports 80 and 443.
-#    To change the application environment set the APP_ENV in environment option of the service
-#    to your env.
+#    The service expects that the image to have the application code with all of its composer
+#    and NPM if any dependencies installed and compiled. Usually this image need to be obtained
+#    from a Docker registry in which CI/CD tool has already build the image.
 #
 # 2. The mysql service hosts the database on a Mysql 5.7 image. The service runs in dnsrr mode.
 #    This service has no replicas, hence we have take advantage of the dns round-robin mode to
-#    remove the virtual IP network infront of this service which is created by the routing mesh
+#    remove the virtual IP network in front of this service which is created by the routing mesh
 #    for performance reasons. It exposes port 3306 and it will be deployed on a master mode.
 #
-# 3. The redis serivce is responsible on caching in application. It is deployed using the same
+# 3. The redis service is responsible on caching in application. It is deployed using the same
 #    parameters as the mysql service.
 #
 #
 # Apart from services, the stack uses named volumes for database and redis data. Moreover, a network
 # is created which has all the services joined on it.
+#
+# The services uses environment variables. Docker stack don't yet support loading .env file for compose
+# files. Hence, the variables need to be replaced with actual values or using this trick to process the
+# compose file first with Docker compose and give it to stack;
+#
+# docker stack deploy -c <(docker-compose -f <stack-file-name>.yml config) <stack-name>
+#
+# This method is not recommended since it may expose the credentials in .env file to terminal history.
 
 version: "3.7"
 
 services:
   web:
     image: laravelapp/app:latest
-    command: ["--env=prod"]
+    command: ["/usr/bin/supervisord"]
     env_file:
       - .env
     ports:
@@ -57,8 +66,8 @@ services:
       MYSQL_USER: "${DB_USERNAME}"
       MYSQL_PASSWORD: "${DB_PASSWORD}"
     ports:
-      - target: ${DB_PORT}
-        published: ${DB_PORT}
+      - target: 3306
+        published: "${DB_PORT}"
         protocol: tcp
         mode: host
     networks:
@@ -75,8 +84,8 @@ services:
     env_file:
       - .env
     ports:
-      - target: ${REDIS_PORT}
-        published: ${REDIS_PORT}
+      - target: 6379
+        published: "${REDIS_PORT}"
         protocol: tcp
         mode: host
     networks:
