--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=laravel
-DB_USERNAME=root
+DB_ROOT_PASSWORD=
+DB_USERNAME=laravel
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
@@ -23,7 +24,7 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=smtp
+MAIL_DRIVER=log
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
 MAIL_USERNAME=null
